# meta-data-client

./: BAR CHART IN D3.ipynb  BAR CHART IN D4.ipynb  Pipfile  analysis.ipynb  load_env.py  main.py  notebook.py  setup.cfg  test1.py
.ipynb_checkpoints/: BAR CHART IN D3-checkpoint.ipynb  BAR CHART IN D4-checkpoint.ipynb  analysis-checkpoint.ipynb
client/: __init__.py  create_instances.py  meta_data_client.py  objects.py
client/gql_requests/: __init__.py  authorize.gql  general.py  gql_requests.py  user.py
metadataclient/: __init__.py  meta_data_client.py
metadataclient/gql_requests/: __init__.py
tests/: __init__.py  test_login.py
