[metadata]
name = meta-data-client
version = 0.0.2
description = a graphql client lib to access data in MetaDataApi
long_description = file: README.rst
url = https://github.com/grusinator/meta-data-clien
author = William Sandvej Hansen
author_email = grusinator@gmail.com
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
include_package_data = true
packages = find: